# TTT4145-Radio-lab

./: .gitignore  CMakeLists.txt  README.md
python/: pyproject.toml
python/radiolab/: image_manipulator.py  rx.py  txrx.py
python/test/: test_pybind.py
simulations/: pll.py
src/core/: root_raised_cosine.cpp
src/modem/: modem.cpp  modem.h
