[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "radiolab"
version = "0.1.0"
dependencies = [
    "pyadi-iio==0.0.20",
    "numpy==2.2.6",
    "pytest==9.0.2",
    "matplotlib==3.10.8",
    "scipy==1.15.3",
    "opencv-python==4.13.0.92",
]

[tool.scikit-build]
cmake.source-dir = ".."
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]
cmake.build-type = "Release"
install.components = ["python"]
